--- a/TradeHubGui/Views/EditInstanceWindow.xaml
+++ b/TradeHubGui/Views/EditInstanceWindow.xaml
@@ -21,6 +21,15 @@
         <TextBlock DockPanel.Dock="Top" Margin="12,10,12,0" Text="{Binding Tag, RelativeSource={RelativeSource AncestorType=mah:MetroWindow}}" 
                     Style="{StaticResource SubHeaderTextBlockStyle}"/>
 
+        <Grid Grid.Row="0" Margin="12,40,12,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="Description" Margin="0,0,8,0" VerticalAlignment="Center" Style="{StaticResource SubHeaderTwoTextBlockStyle}"/>
+            <TextBox Grid.Column="1" Text="{Binding InstanceDescription, UpdateSourceTrigger=PropertyChanged}"/>
+        </Grid>
+
         <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="12,25,12,20">
             <views:InstanceView />
         </ScrollViewer>
