--- a/TradeHubGui/Views/SettingsWindow.xaml
+++ b/TradeHubGui/Views/SettingsWindow.xaml
@@ -1,31 +1,16 @@
-﻿<mah:MetroWindow x:Class="TradeHubGui.Views.SettingsWindow"
+﻿<mah:MetroWindow
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                xmlns:local="clr-namespace:TradeHubGui.Views" 
+                x:Class="TradeHubGui.Views.SettingsWindow"
                 GlowBrush="Silver"
-                Title="Settings" Height="500" Width="500">
+                Title="Settings" Height="240" Width="400"
+                ResizeMode="NoResize">
 
-
-    <Grid>
-        <StackPanel HorizontalAlignment="Left" Margin="20">
-            <TextBox Text="TextBox control" Margin="4"/>
-            <CheckBox Content="CheckBox control" Margin="4"/>
-            <RadioButton Content="RadioButton control" Margin="4"/>
-            <RadioButton Content="RadioButton control" Margin="4"/>
-            <ComboBox SelectedIndex="0" Width="150" Margin="4">
-                <ComboBoxItem>Item 1</ComboBoxItem>
-                <ComboBoxItem>Item 2</ComboBoxItem>
-                <ComboBoxItem>Item 3</ComboBoxItem>
-                <ComboBoxItem>Item 4</ComboBoxItem>
-            </ComboBox>
-            <ListBox Margin="4">
-                <ListBoxItem>Item 1</ListBoxItem>
-                <ListBoxItem>Item 2</ListBoxItem>
-                <ListBoxItem>Item 3</ListBoxItem>
-                <ListBoxItem>Item 4</ListBoxItem>
-            </ListBox>
-            <Button Margin="4">Button</Button>
-            <ToggleButton Margin="4">ToggleButton</ToggleButton>
+    <Grid Margin="6">
+        <StackPanel>
+            <local:HistoricalParametersView/>
         </StackPanel>
     </Grid>
 </mah:MetroWindow>
