--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -39,6 +39,7 @@
         <ResourceDictionary>
             <conv:ProviderConnectionStatusToBrushConverter x:Key="ConnectionStatusToBrush"/>
             <conv:ServiceStatusToBrushConverter x:Key="ServiceStatusToBrush"/>
+            <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
             <conv:ServiceStatusToVisibilityConverter x:Key="ServiceStatusToVisibility"/>
             <conv:SelectedProviderToVisibilityConverter x:Key="SelectedProviderToVisibility"/>
             <templateSelector:CredentialsTemplateSelector x:Key="CredentialsTemplateSelector"/>
@@ -180,7 +181,7 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <Grid>
+                        <Grid Visibility="{Binding ProviderParametersToBeDisplayed, Converter={StaticResource BoolToVisibilityConverter}}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
                                 <ColumnDefinition />
@@ -190,7 +191,27 @@
                                       ItemsSource="{Binding MarketDataProviders}" DisplayMemberPath="ProviderName" FontWeight="Bold"/>
                         </Grid>
 
-                        <StackPanel Grid.Column="1" Orientation="Horizontal">
+                        <Grid Grid.Row="0" Visibility="{Binding NewProviderParametersRequired, Converter={StaticResource BoolToVisibilityConverter}}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0" Text="Provider Name" Margin="0,0,8,0" VerticalAlignment="Center" 
+                                       Style="{StaticResource SubHeaderTwoTextBlockStyle}"/>
+                            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding NewDataProviderName, NotifyOnTargetUpdated=True}"/>
+
+                            <Button Grid.Row="1" Grid.Column="1" Content="Save" Margin="0,10,100,0" Width="80" HorizontalAlignment="Right"
+                                    Command="{Binding SaveNewProviderCommand}" CommandParameter="MarketDataProvider"/>
+                            <Button Grid.Row="1" Grid.Column="1" Content="Cancel" Margin="0,10,0,0" Width="80" HorizontalAlignment="Right"
+                                    Command="{Binding CancelCommand}" CommandParameter="MarketDataProvider"/>
+                        </Grid>
+
+                        <StackPanel Grid.Column="1" Orientation="Horizontal"
+                                    Visibility="{Binding ProviderParametersToBeDisplayed, Converter={StaticResource BoolToVisibilityConverter}}">
                             <Button ToolTip="Add new provider" Margin="20,0,0,0" Padding="0" Width="24"
                                     Command="{Binding AddProviderCommand}" CommandParameter="MarketDataProvider">
                                 <Image Width="13" Height="13" Source="{StaticResource imgFolder}" UseLayoutRounding="True"/>
@@ -219,7 +240,7 @@
                         </Grid>
 
                         <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="100,10,0,0" HorizontalAlignment="Left" 
-                                    Visibility="{Binding SelectedMarketDataProvider, Converter={StaticResource SelectedProviderToVisibility}}">
+                                    Visibility="{Binding ProviderParametersToBeDisplayed, Converter={StaticResource BoolToVisibilityConverter}}">
                             <Button Content="Connect" Margin="4" MinWidth="80" Command="{Binding ConnectProviderCommand}" CommandParameter="MarketDataProvider"/>
                             <Button Content="Disconnect" Margin="4" MinWidth="80" Command="{Binding DisconnectProviderCommand}" CommandParameter="MarketDataProvider"/>
                             <Button ToolTip="Save parameters" Margin="30,4,0,4" Padding="0" Width="24"
@@ -230,7 +251,7 @@
                                         <BeginStoryboard>
                                             <Storyboard>
                                                 <DoubleAnimation Storyboard.TargetProperty="Opacity" From="1.0" To="0.0" Duration="0:0:0"/>
-                                                <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0.0" To="1.0" Duration="0:0:2" BeginTime="0:0:3"/>
+                                                <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0.0" To="1.0" Duration="0:0:2" BeginTime="0:0:4"/>
                                             </Storyboard>
                                         </BeginStoryboard>
                                     </EventTrigger>
@@ -238,7 +259,7 @@
                             </Button>
                         </StackPanel>
                         
-                        <StackPanel Grid.Row="4">
+                        <StackPanel Grid.Row="4" Visibility="{Binding SelectedMarketDataProvider, Converter={StaticResource SelectedProviderToVisibility}}">
                             <TextBlock Margin="150,0,0,0" Style="{StaticResource SubHeaderTextBlockStyle}" Text="{Binding DataProviderInfoMessage, NotifyOnTargetUpdated=True}">
                                 <TextBlock.Triggers>
                                     <EventTrigger RoutedEvent="Binding.TargetUpdated">
