(TH-270) Modified WPF Resources.dll to allow tab indexing on all entry fields.

--- a/Resources/Resources/Styles/WPFToolkit/DataGrid.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/DataGrid.xaml
@@ -490,7 +490,8 @@
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
-		<Style.Triggers>
+        <Setter Property="KeyboardNavigation.IsTabStop" Value="False" />
+        <Style.Triggers>
 			<Trigger Property="IsSelected" Value="true">
 				<Setter Property="Background" Value="{StaticResource DataGridSelectedBrush}"/>
 				<Setter Property="Foreground" Value="{StaticResource DataGridSelectedForeground}"/>
