--- a/Resources/Resources/Styles/WPFToolkit/DateTimeUpDown.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/DateTimeUpDown.xaml
@@ -47,7 +47,7 @@
         <Setter Property="FormatString" Value="g"/>
         <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
         <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
-        <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="IsTabStop" Value="True" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:DateTimeUpDown}">
