--- a/Resources/Resources/Styles/WPFToolkit/TimeUpDown.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/TimeUpDown.xaml
@@ -32,7 +32,7 @@
 		<Setter Property="AllowDrop" Value="True"/>
 		<Setter Property="Height" Value="22" />
 		<Setter Property="MinWidth" Value="20"/>
-		<Setter Property="IsTabStop" Value="False" />
+		<Setter Property="IsTabStop" Value="True" />
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="controls:TimeUpDown">
