--- a/TradeHubGui/Views/GeneticOptimizationWindow.xaml
+++ b/TradeHubGui/Views/GeneticOptimizationWindow.xaml
@@ -29,73 +29,73 @@
 
         <DataTemplate x:Key="StartValueIntegerTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:IntegerUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="1"/>
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
         <DataTemplate x:Key="StartValueUnsignedIntegerTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:IntegerUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" Minimum="0" />
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" Minimum="0" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
         <DataTemplate x:Key="StartValueDecimalTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:DecimalUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" />
+                <wpfToolkitExtended:DecimalUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
         <DataTemplate x:Key="StartValueDoubleTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:DoubleUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" />
+                <wpfToolkitExtended:DoubleUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" IsTabStop="True"/>
             </Border>
         </DataTemplate>
         
         <DataTemplate x:Key="StartValueSingleTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:SingleUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.01" />
+                <wpfToolkitExtended:SingleUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.01" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
         <DataTemplate x:Key="StartValueLongTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:LongUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" />
+                <wpfToolkitExtended:LongUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" IsTabStop="True"/>
             </Border>
         </DataTemplate>
         
         <DataTemplate x:Key="EndValueIntegerTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" />
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
         <DataTemplate x:Key="EndValueUnsignedIntegerTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" Minimum="0" />
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" Minimum="0" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
         <DataTemplate x:Key="EndValueDecimalTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:DecimalUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" />
+                <wpfToolkitExtended:DecimalUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
         <DataTemplate x:Key="EndValueDoubleTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:DoubleUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" />
+                <wpfToolkitExtended:DoubleUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" IsTabStop="True"/>
             </Border>
         </DataTemplate>
         
         <DataTemplate x:Key="EndValueSingleTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:SingleUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.01" />
+                <wpfToolkitExtended:SingleUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.01" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
         <DataTemplate x:Key="EndValueLongTemplate">
             <Border Background="#8FFF">
-                <wpfToolkitExtended:LongUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" />
+                <wpfToolkitExtended:LongUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" IsTabStop="True"/>
             </Border>
         </DataTemplate>
 
